--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,9 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    %p.notice.flash= notice
-    %p.alert.flash= alert
-    = yield
+    - if notice
+      %p.alert.alert-info= notice
+    - if alert
+      %p.alert.alert-error= alert
+    .container
+      = yield
