--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,3 +1,4 @@
+#playback
 .page-header
   %h1= @room.name
 .row
@@ -15,3 +16,4 @@
       %p <Song 2>
     .user-controls
       %h3 Add Songs
+= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.1/require.min.js", 'data-main' => '/assets/main'
