Load video metadata server side

--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -23,10 +23,8 @@
           %label{:for => 'provider'} Provider
           %select{:name => 'provider'}
             %option{:value => 'youtube'} Youtube
-          %label{:for => 'media_id'} ID
-          %input{:type => 'text', :name => 'media_id'}
-          %label{:for => 'duration'} Duration
-          %input{:type => 'text', :name => 'duration'}
+          %label{:for => 'mediaId'} ID
+          %input{:type => 'text', :name => 'mediaId'}
           %br
           %input.btn{:type => 'submit'}
 = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.1/require.min.js", 'data-main' => '/assets/main'
