Add soundcloud support. closes #1

--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -22,6 +22,7 @@
           %legend Add Song
           %label{:for => 'provider'} Provider
           %select{:name => 'provider'}
+            %option{:value => 'soundcloud'} Soundcloud
             %option{:value => 'youtube'} Youtube
           %label{:for => 'mediaId'} ID
           %input{:type => 'text', :name => 'mediaId'}
