--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -27,5 +27,5 @@
         %li
           %p{'data-bind' => 'text: title'}
           %p{'data-bind' => 'text: artist'}
-          %a{'data-bind' => 'click: $root.enqueueSong'} Queue Song
+          %a{'data-bind' => 'click: $root.enqueueSong.bind($root, $data)'} Queue Song
 = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.1/require.min.js", 'data-main' => '/assets/main'
