New UI for homepage

--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,7 +1,5 @@
 #playback
-.page-header
-  %h1= @room.name
-.row
+.row-fluid
   .span4.room-queue
     %h3 Coming up
     %ul{'data-bind' => 'foreach: upcomingSongs'}
