--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,12 +7,24 @@
       RAILS_ENV = "#{ENV['RAILS_ENV']}";
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/knockout/2.2.0/knockout-min.js"
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.1/bootstrap.min.js"
+    = javascript_include_tag "libs/reveal_header.js"
     = csrf_meta_tags
+
   %body
     #playback
-    - if notice
-      %p.alert.alert-info= notice
-    - if alert
-      %p.alert.alert-error= alert
-    .container
+    .header
+      .name
+        %h1= @title || "Party Rooms"
+      .logo
+        =image_tag 'logo.png'
+      .stripes
+        .stripe
+        .stripe
+        .stripe.bottom
+    .container-fluid
+      - if notice
+        %p.alert.alert-info= notice
+      - if alert
+        %p.alert.alert-error= alert
       = yield
