--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,8 @@
     #playback
     .header
       .name
-        %h1= @title || "Party Rooms"
-      .logo
+        %h1= @title || "party Rooms"
+      %a.logo{:href => root_url}
         =image_tag 'logo.png'
       .stripes
         .stripe
