--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -1,10 +1,6 @@
 .rooms
-  - room_rows = @rooms.enum_for(:each_slice, 4).to_a
-  - if room_rows.last.length != 4
-    - room_rows.last.push(:new)
-  - else
-    - room_rows.push([:new])
-  - room_rows.each do |row|
+  - @rooms.insert(6, :new)
+  - @rooms.enum_for(:each_slice, 4).to_a.each do |row|
     .room-row.row-fluid
       - row.each do |room|
         .span3
