--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/knockout/2.2.0/knockout-min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.1/bootstrap.min.js"
-    = javascript_include_tag "libs/reveal_header.js"
+    = javascript_include_tag "misc/reveal_header.js"
     = csrf_meta_tags
 
   %body
