--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,5 +1,5 @@
 #playback
-.row-fluid
+.row-fluid#room-container
   .span4.room-queue
     %h3 Coming up
     %ul{'data-bind' => 'foreach: upcomingSongs'}
