--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,8 +18,8 @@
       %a.logo{:href => root_url}
         =image_tag 'logo.png'
       .stripes
-        .stripe
-        .stripe
+        .stripe.top
+        .stripe.middle
         .stripe.bottom
     .container-fluid
       - if notice
