--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -65,11 +65,11 @@ h1 {
 
   .stripe {
     background-color: #787878;
-    height: 35px;
+    height: 27px;
     width: 100%;
-    margin-bottom: 5px;
-    &.bottom {
-      height: 8px;
+    margin-bottom: 3px;
+    &.middle {
+      height: 28px;
     }
   }
 }
