--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,29 +1,33 @@
-.row-fluid#room-container
-  .span4.room-queue
-    %h3 Coming up
-    %ul{'data-bind' => 'foreach: upcomingSongs'}
-      %li
-        %p{'data-bind' => 'text: title'}
-        %p{'data-bind' => 'text: artist'}
-    %p{'data-bind' => 'visible: upcomingSongs().length === 0'}
-      There are no more songs in the queue! Quick, add a song to keep the party going.
-  .span8
-    .now-playing{'data-bind' => 'with: currentSong'}
-      %h3 Now Playing
-      %p
-        .title{'data-bind' => 'text: title'}
-        .artist{'data-bind' => 'text: artist'}
-    .user-controls
-      %form{'data-bind' => 'submit: search'}
-        %fieldset
-          %legend Find a Song
-          %input{:type => 'text', :name => 'query', :placeholder => "Search for songs or artists"}
-          %br
-          %input.btn{:type => 'submit', :value => "Search"}
-      %ul{'data-bind' => 'foreach: searchResults'}
-        %li
-          %p{'data-bind' => 'text: title'}
-          %p{'data-bind' => 'text: artist'}
-          %a{'data-bind' => 'click: $root.enqueueSong.bind($root, $data)'} Queue Song
+.row-fluid.now-playing{'data-bind' => 'with: currentSong'}
+  .head
+    .volume.pull-right
+    .title Now Playing
+  .body
+    .current-song
+      .name{'data-bind' => 'text: title'}
+      .artist{'data-bind' => 'text: artist'}
+      .current-position{'data-bind' => 'text: durationFormatted()'}
+    .voting
+      .like
+      .skip
+.row-fluid.songs-container
+  .row-fluid.span6.room-queue
+    .head Coming Up
+    .body{'data-bind' => 'foreach: upcomingSongs'}
+      .song
+        .name{'data-bind' => 'text: title'}
+        .artist{'data-bind' => 'text:artist'}
+        .duration{'data-bind' => 'text: durationFormatted()'}
+  .row-fluid.span6.add-songs
+    .head Add Song
+    .body
+      %form.search{'data-bind' => 'submit: search'}
+        %input.query{:type => 'text', :name => 'query', :placeholder => "Search for songs or artists"}
+        %input.btn{:type => 'submit', :value => "Search"}
+      .results{'data-bind' => 'foreach: searchResults'}
+        .song
+          .plus{'data-bind' => 'click: $root.enqueueSong.bind($root, $data)'} +
+          .name{'data-bind' => 'text: title'}
+          .artist{'data-bind' => 'text:artist'}
 = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.1/require.min.js", 'data-main' => '/assets/main'
 #playback
