--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -26,10 +26,13 @@
 
 body {
   background-color: #2A2A2A;
+  padding: 5px 0;
 }
 
 .container-fluid {
   min-width: 600px;
+  max-width: 1024px;
+  margin: auto;
 }
 
 @font-face {
@@ -46,7 +49,6 @@ body {
 
 .header {
   height: 112px;
-  margin-top: 5px;
   width: 100%;
   overflow: hidden;
   position: relative;
@@ -213,7 +215,6 @@ h1 {
 }
 
 .songs-container {
-  max-width: 720px;
   margin: auto;
 
   .song {
@@ -228,7 +229,7 @@ h1 {
     .name {
       font-family: arial, helvetica, sans-serif;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 16px;
       color: #4E4E4E;
       @include ellipsis;
     }
