--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -109,8 +109,16 @@ h1 {
     height: 27px;
     width: 100%;
     margin-bottom: 3px;
+    color: white;
+    text-align: right;
+    font-size: 20px;
+    line-height: 27px;
+    padding-right: 5px;
+    font-family: Impact, Charcoal, sans-serif;
+
     &.middle {
       height: 28px;
+      line-height: 28px;
     }
   }
 }
