--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,9 @@
       .stripes
         .stripe.top
         .stripe.middle
+          %p{'data-bind' => 'text: activeUsers() + " " + (activeUsers() === 1 ? "person" : "people")'}
         .stripe.bottom
+          %p{'data-bind' => 'text: songs().length + " " + (songs().length === 1 ? "song" : "songs")'}
     .container-fluid
       - if notice
         %p.alert.alert-info= notice
