Using the requirejs-rails gem to compile JS on deploy

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,10 +3,7 @@
   %head
     %title WebDJ
     = stylesheet_link_tag "application", :media => "all"
-    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.min.js"
-    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/knockout/2.2.0/knockout-min.js"
-    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.1/bootstrap.min.js"
-    = javascript_include_tag "misc/reveal_header.js"
+    = requirejs_include_tag "main"
     = csrf_meta_tags
 
   %body
