--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -14,7 +14,7 @@
             .room.new{'data-toggle' => 'modal', 'data-target' => '#start-party'}
               .thumbnail
               .name Start a Party!
-#start-party.modal{"data-bind" => "visible: newRoomVisible", :style => "display: none"}
+#start-party.modal{:style => "display: none"}
   .modal-header
     %h3 Choose a name for your party
   .modal-body
