--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,8 @@
   %head
     %title WebDJ
     = stylesheet_link_tag "application", :media => "all"
-    = requirejs_include_tag "main"
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.1/require.min.js"
+    = javascript_include_tag "main"
     = csrf_meta_tags
 
   %body
