--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -18,10 +18,6 @@
   .modal-header
     %h3 Choose a name for your party
   .modal-body
-    %form{:action => "rooms/go"}
-      .control-group
-        .controls
-          %input{:name => "room_name", :placeholder => "Party Name", :type => "text"}
-      .control-group
-        .controls
-          %input{:type => "submit", :value => "Create"}/
+    %form.form-inline{:action => "rooms/go"}
+      %input{:name => "room_name", :placeholder => "Party Name", :type => "text"}
+      %input{:type => "submit", :value => "Create"}
